Fix plus sign getting cut off in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h1 {
   font-size: 4em;
   letter-spacing: 8px;
   text-shadow: 2px 5px 4px #0b00008a;
-  transition: letter-spacing 1s ease-in, opacity 0.5s ease-in;
+  transition: letter-spacing 1s ease-in, opacity 1.2s 0.6s ease-in;
 }
 
 /* For h1 animation on bigger screens with JS */
@@ -110,11 +110,9 @@ form {
   margin: 0;
   padding: 0;
   background: none;
-  transform: translate(3px, -18px);
-  font-size: 2.1em;
+  transform: translate(3px, -3.4px);
+  font-size: 2em;
   box-shadow: none;
-  height: 45px;
-  background-size: contain;
 }
 
 #add i:hover {
